--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -30,6 +30,7 @@
         </field>
     </record>
 
+    <!-- Search view -->
     <record model="ir.ui.view" id="course_search_view">
         <field name="name">course.search</field>
         <field name="model">openacademy.course</field>
@@ -46,6 +47,7 @@
             </search>
         </field>
     </record>
+
     <!-- override the automatically generated list view for courses -->
     <record model="ir.ui.view" id="course_tree_view">
         <field name="name">course.tree</field>
@@ -68,7 +70,7 @@
         <field name="name">Courses</field>
         <field name="res_model">openacademy.course</field>
         <field name="view_mode">tree,form</field>
-        <field name="context" eval="{'search_default_my_courses': 1}"/>
+        <field name="context" eval="{'search_default_my_courses': 0}"/>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">Create the first course
             </p>
@@ -89,6 +91,7 @@
     <!-- Full id location:
          action="openacademy.course_list_action"
          It is not required when it is the same module -->
+
     <!-- session form view -->
     <record model="ir.ui.view" id="session_form_view">
         <field name="name">session.form</field>
@@ -107,6 +110,7 @@
                             <field name="start_date"/>
                             <field name="duration"/>
                             <field name="seats"/>
+                            <field name="attendees_count"/>
                             <field name="taken_seats" widget="progressbar"/>
                         </group>
                     </group>
@@ -142,10 +146,22 @@
         </field>
     </record>
 
+    <!--     Graph view-->
+    <record model="ir.ui.view" id="openacademy_session_graph_view">
+            <field name="name">openacademy.session.graph</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <graph string="Participations by Courses">
+                    <field name="course_id"/>
+                    <field name="attendees_count" type="measure"/>
+                </graph>
+            </field>
+        </record>
+
     <record model="ir.actions.act_window" id="session_list_action">
         <field name="name">Sessions</field>
         <field name="res_model">openacademy.session</field>
-        <field name="view_mode">tree,form,calendar</field>
+        <field name="view_mode">tree,form,calendar,graph</field>
     </record>
 
     <menuitem id="session_menu" name="Sessions"
